# To-Do-List-manager

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env_example  pyproject.toml
todo/tasks/: filters.py  middleware.py  models.py  serializers.py  tasks.py  tests.py  views.py
todo/tasks/migrations/: 0001_initial.py  0002_alter_task_options_and_more.py  0003_task_author_task_created_task_slug_task_updated_and_more.py
todo/todo/: .settings.py.swp  asgi.py  celery.py  settings.py  urls.py  wsgi.py
